# Retail-Sale-App

./: .gitignore  CMakeLists.txt  dialog_add_goods_manager.cpp  dialog_add_goods_manager.h  dialog_add_goods_manager.ui  dialog_create_order.cpp  dialog_create_order.h  dialog_create_order.ui  dialog_discount_manager.cpp  dialog_discount_manager.h  dialog_discount_manager.ui  dialog_edit_clients_manager.cpp  dialog_edit_clients_manager.h  dialog_edit_clients_manager.ui  dialog_edit_goods_manager.cpp  dialog_edit_goods_manager.h  dialog_edit_goods_manager.ui  dialog_inventory.cpp  dialog_inventory.h  dialog_inventory.ui  dialog_profile_edit.cpp  dialog_profile_edit.h  dialog_profile_edit.ui  dialog_view_orders.cpp  dialog_view_orders.h  dialog_view_orders.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindowclient.cpp  mainwindowclient.h  mainwindowclient.ui  mainwindowmanager.cpp  mainwindowmanager.h  mainwindowmanager.ui  mainwindowwarehouse.cpp  mainwindowwarehouse.h  mainwindowwarehouse.ui
